@startuml
title Trip Service – ER Diagram (With Cardinality)
hide methods
hide stereotypes
skinparam linetype ortho
skinparam entity {
  BackgroundColor White
  BorderColor Black
}

' =================================================
' USERS (REFERENCE)
' =================================================
entity "User" as users {
  + user_id : UUID <<PK>>
}

' =================================================
' CORE TRIP
' =================================================
entity "Trip" as trips {
  + trip_id : UUID <<PK>>
  --
  host_user_id : UUID
  title : varchar
  description : text
  join_policy : OPEN | APPROVAL_REQUIRED
  status : DRAFT | PUBLISHED | CANCELLED | COMPLETED | ARCHIVED
  visibility : PUBLIC | PRIVATE
  start_date : date
  end_date : date
  max_people : int
  is_full : boolean
  full_reason : text
  archived_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

' =================================================
' TRIP POLICIES (1:1)
' =================================================
entity "TripPolicies" as trip_policies {
  + trip_id : UUID <<PK, FK>>
  --
  cancellation_policy : text
  refund_policy : text
}

' =================================================
' TRIP METADATA (1:1)
' =================================================
entity "TripMetadata" as trip_metadata {
  + trip_id : UUID <<PK, FK>>
  --
  trip_summary : jsonb
  whats_included : jsonb
  whats_excluded : jsonb
  essentials : jsonb
}

' =================================================
' ITINERARY (1:N)
' =================================================
entity "TripItinerary" as trip_itineraries {
  + itinerary_id : UUID <<PK>>
  --
  trip_id : UUID <<FK>>
  day_number : int
  title : varchar
  description : text
}

' =================================================
' TAGS (M:N)
' =================================================
entity "Tag" as tags {
  + id : int <<PK>>
  --
  name : varchar
}

entity "TripTag" as trip_tags {
  + trip_id : UUID <<PK, FK>>
  + tag_id : int <<PK, FK>>
}

' =================================================
' INVITES (1:N)
' =================================================
entity "TripInvite" as trip_invites {
  + invite_id : UUID <<PK>>
  --
  trip_id : UUID <<FK>>
  invited_by : UUID
  invite_type : IN_APP | LINK | EMAIL | PHONE
  invite_source : DIRECT | TRAVELPAL
  status : PENDING | ACCEPTED | DECLINED | EXPIRED
}

' =================================================
' JOIN REQUESTS (1:N)
' =================================================
entity "TripJoinRequest" as trip_join_requests {
  + request_id : UUID <<PK>>
  --
  trip_id : UUID <<FK>>
  user_id : UUID
  source : DIRECT | INVITE
  status : PENDING | APPROVED | REJECTED
}

' =================================================
' MEMBERS (1:N)
' =================================================
entity "TripMember" as trip_members {
  + membership_id : UUID <<PK>>
  --
  trip_id : UUID <<FK>>
  user_id : UUID
  role : HOST | CO_HOST | MEMBER
  status : ACTIVE | LEFT | REMOVED
  removal_reason : text
}

' =================================================
' QUERIES (1:N)
' =================================================
entity "TripQuery" as trip_queries {
  + query_id : UUID <<PK>>
  --
  trip_id : UUID <<FK>>
  asked_by : UUID
  question : text
  answer : text
}

' =================================================
' WISHLIST (M:N)
' =================================================
entity "TripWishlist" as trip_wishlists {
  + trip_id : UUID <<PK, FK>>
  + user_id : UUID <<PK, FK>>
}

' =================================================
' REPORTS (1:N)
' =================================================
entity "TripReport" as trip_reports {
  + report_id : UUID <<PK>>
  --
  trip_id : UUID <<FK>>
  reported_by : UUID
  reason : text
}

' =================================================
' CARDINALITY RELATIONSHIPS
' =================================================

users ||--o{ trips : creates

trips ||--|| trip_policies : has
trips ||--|| trip_metadata : has

trips ||--o{ trip_itineraries : contains

trips ||--o{ trip_invites : sends
trips ||--o{ trip_join_requests : receives
trips ||--o{ trip_members : has
trips ||--o{ trip_queries : receives
trips ||--o{ trip_reports : has

trips ||--o{ trip_tags : tagged_with
tags  ||--o{ trip_tags : categorizes

users ||--o{ trip_wishlists : wishlists
trips ||--o{ trip_wishlists : wishlisted_by

' =================================================
' IMPORTANT NOTES
' =================================================
note right of trip_members
Exactly ONE ACTIVE HOST per Trip
HOST cannot leave
LEFT != REMOVED
REMOVED requires reason
end note

note bottom of trips
COMPLETED trips auto-archive
ARCHIVED trips are read-only
Not visible in search
end note

@enduml